创建启动模块，导入common依赖，删除非必要文件

--- a/pom.xml
+++ b/pom.xml
@@ -35,6 +35,7 @@
         <module>online</module>
         <module>physical</module>
         <module>hotel</module>
+        <module>start</module>
     </modules>
 
     <properties>
