--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
         <groupId>pr</groupId>
         <artifactId>pipay-shop</artifactId>
         <version>0.0.1-SNAPSHOT</version>
-<!--        <relativePath>../</relativePath>-->
+        <relativePath>../pom.xml</relativePath>
     </parent>
     <artifactId>common</artifactId>
 
@@ -26,6 +26,16 @@
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.redisson</groupId>
+            <artifactId>redisson</artifactId>
+            <scope>runtime</scope>
+        </dependency>
+        <dependency>
+            <groupId>cn.hutool</groupId>
+            <artifactId>hutool-all</artifactId>
             <scope>runtime</scope>
         </dependency>
         <dependency>
