--- a/pom.xml
+++ b/pom.xml
@@ -2,18 +2,24 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
-<!--    <parent>-->
-<!--        <groupId>org.springframework.boot</groupId>-->
-<!--        <artifactId>spring-boot-starter-parent</artifactId>-->
-<!--        <version>3.1.6</version>-->
-<!--        <relativePath/> &lt;!&ndash; lookup parent from repository &ndash;&gt;-->
-<!--    </parent>-->
+
+<!--    根目录主pom标识-->
+    <parent>
+        <groupId>org.springframework.boot</groupId>
+        <artifactId>spring-boot-starter-parent</artifactId>
+        <version>3.1.6</version>
+        <relativePath/> <!-- lookup parent from repository -->
+    </parent>
+
+<!--    公司信息及项目名称和版本-->
     <packaging>pom</packaging>
     <groupId>pr</groupId>
     <artifactId>pipay-shop</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>pipay-shop</name>
     <description>pipay-shop</description>
+
+<!--    没什么用-->
     <url/>
     <licenses>
         <license/>
@@ -28,6 +34,7 @@
         <url/>
     </scm>
 
+<!--    子模块注册-->
     <modules>
         <module>common</module>
         <module>user</module>
@@ -38,6 +45,7 @@
         <module>start</module>
     </modules>
 
+<!--    依赖版本统一说明-->
     <properties>
         <java.version>17</java.version>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -50,6 +58,8 @@
         <jsonwebtoken.version>0.12.5</jsonwebtoken.version>
         <lombok.version>1.18.24</lombok.version>
         <jjwt.version>0.12.5</jjwt.version>
+        <redisson.version>3.25.2</redisson.version>
+        <hutool.version>5.8.24</hutool.version>
     </properties>
 
     <dependencies>
@@ -108,6 +118,21 @@
                 <artifactId>mysql-connector-java</artifactId>
                 <version>${mysql.version}</version>
             </dependency>
+            <dependency>
+                <groupId>org.redisson</groupId>
+                <artifactId>redisson</artifactId>
+                <version>${redisson.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>cn.hutool</groupId>
+                <artifactId>hutool-all</artifactId>
+                <version>${hutool.version}</version>
+            </dependency>
+<!--            <dependency>-->
+<!--                <groupId>io.jsonwebtoken</groupId>-->
+<!--                <artifactId>jjwt</artifactId>-->
+<!--                <version>0.9.1</version>-->
+<!--            </dependency>-->
             <dependency>
                 <groupId>io.jsonwebtoken</groupId>
                 <artifactId>jjwt-api</artifactId>
