--- a/user/pom.xml
+++ b/user/pom.xml
@@ -5,8 +5,8 @@
 	<parent>
 		<groupId>pr</groupId>
 		<artifactId>pipay-shop</artifactId>
-		<version>0.0.1-SNAPSHOT</version>
-<!--		<relativePath>../</relativePath>-->
+		<version>${revision}</version>
+		<relativePath>../pom.xml</relativePath>
 	</parent>
 
 	<artifactId>user</artifactId>
@@ -15,7 +15,7 @@
 		<dependency>
 			<groupId>pr</groupId>
 			<artifactId>common</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
+			<version>${revision}</version>
 		</dependency>
 	</dependencies>
 
