--- a/user/pom.xml
+++ b/user/pom.xml
@@ -17,6 +17,10 @@
 			<artifactId>common</artifactId>
 			<version>${revision}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.projectlombok</groupId>
+			<artifactId>lombok</artifactId>
+		</dependency>
 	</dependencies>
 
 </project>
