修改子模块pom文件中的相对路径

--- a/common/pom.xml
+++ b/common/pom.xml
@@ -6,7 +6,7 @@
 		<groupId>pr</groupId>
 		<artifactId>pipay-shop</artifactId>
 		<version>${revision}</version>
-		<relativePath>../pom.xml</relativePath>
+		<relativePath>..</relativePath>
 	</parent>
     <artifactId>common</artifactId>
 
